--- a/dashboard.html
+++ b/dashboard.html
@@ -25,53 +25,95 @@
   <div class="dashboard-container">
     <aside class="sidebar">
       <ul>
-        <li class="active">Accounts</li>
-        <li>Transfers</li>
-        <li>Bill Pay</li>
-        <li>Deposit</li>
-        <li>Profile</li>
-        <li>Security</li>
-        <li>Notifications</li>
-        <li>Support</li>
+        <li class="active" data-section="accounts">Accounts</li>
+        <li data-section="transfers">Transfers</li>
+        <li data-section="billpay">Bill Pay</li>
+        <li data-section="deposit">Deposit</li>
+        <li data-section="profile">Profile</li>
+        <li data-section="security">Security</li>
+        <li data-section="notifications">Notifications</li>
+        <li data-section="support">Support</li>
       </ul>
     </aside>
     <main class="dashboard-main">
-      <section class="balance-section">
-        <h2>Welcome, Raymond Morgan</h2>
-        <div class="balance-card">
-          <span>Current Balance</span>
-          <h1 id="balance">$3,129,445.66</h1>
-        </div>
+      <!-- Accounts Section (Default View) -->
+      <section id="accounts-section" class="dashboard-section active">
+        <section class="balance-section">
+          <h2>Welcome, Raymond Morgan</h2>
+          <div class="balance-card">
+            <span>Current Balance</span>
+            <h1 id="balance">$3,129,445.66</h1>
+          </div>
+        </section>
+        <section class="transactions-section">
+          <h3>Recent Transactions</h3>
+          <table class="transactions-table" id="transactionsTable">
+            <thead>
+              <tr>
+                <th>Date</th>
+                <th>Description</th>
+                <th>Type</th>
+                <th>Amount</th>
+                <th>Balance</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Transactions will be injected by JS -->
+            </tbody>
+          </table>
+        </section>
+        <section class="widgets-section">
+          <div class="widget currency-converter">
+            <h4>Currency Converter</h4>
+            <div id="currencyWidget"></div>
+          </div>
+          <div class="widget notifications-widget">
+            <h4>Notifications</h4>
+            <ul id="notificationsList"></ul>
+          </div>
+          <div class="widget live-chat-widget">
+            <h4>Live Chat</h4>
+            <div id="chatWidget"></div>
+          </div>
+        </section>
       </section>
-      <section class="transactions-section">
-        <h3>Recent Transactions</h3>
-        <table class="transactions-table" id="transactionsTable">
-          <thead>
-            <tr>
-              <th>Date</th>
-              <th>Description</th>
-              <th>Type</th>
-              <th>Amount</th>
-              <th>Balance</th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- Transactions will be injected by JS -->
-          </tbody>
-        </table>
-      </section>
-      <section class="widgets-section">
-        <div class="widget currency-converter">
-          <h4>Currency Converter</h4>
-          <div id="currencyWidget"></div>
-        </div>
-        <div class="widget notifications-widget">
-          <h4>Notifications</h4>
-          <ul id="notificationsList"></ul>
-        </div>
-        <div class="widget live-chat-widget">
-          <h4>Live Chat</h4>
-          <div id="chatWidget"></div>
+
+      <!-- Profile Section -->
+      <section id="profile-section" class="dashboard-section">
+        <div class="profile-container">
+          <h2>Profile Information</h2>
+          <div class="profile-card">
+            <div class="profile-header">
+              <h3>Personal Details</h3>
+              <button id="editProfileBtn" class="chase-btn">Edit Profile</button>
+            </div>
+            <form id="profileForm" class="profile-form">
+              <div class="form-group">
+                <label for="profileName">Full Name</label>
+                <input type="text" id="profileName" name="name" readonly>
+              </div>
+              <div class="form-group">
+                <label for="profileDob">Date of Birth</label>
+                <input type="text" id="profileDob" name="dob" readonly>
+              </div>
+              <div class="form-group">
+                <label for="profilePhone">Phone Number</label>
+                <input type="tel" id="profilePhone" name="phone" readonly>
+              </div>
+              <div class="form-group">
+                <label for="profileEmail">Email Address</label>
+                <input type="email" id="profileEmail" name="email" readonly>
+              </div>
+              <div class="form-group">
+                <label for="profileAddress">Home Address</label>
+                <textarea id="profileAddress" name="address" readonly></textarea>
+              </div>
+              <div class="form-actions" style="display: none;">
+                <button type="submit" class="chase-btn">Save Changes</button>
+                <button type="button" id="cancelEditBtn" class="chase-btn secondary">Cancel</button>
+              </div>
+            </form>
+          </div>
         </div>
       </section>
     </main>
