--- a/index.html
+++ b/index.html
@@ -17,21 +17,27 @@
     </nav>
   </header>
   <main class="login-main">
-    <section class="login-card">
-      <h1>Sign in to Chase</h1>
-      <form id="loginForm">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required placeholder="Email address">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required placeholder="Password">
-        <button type="submit" class="chase-btn">Sign In</button>
+    <div class="login-container">
+      <img src="https://download.logo.wine/logo/Chase_Bank/Chase_Bank-Logo.wine.png" alt="Chase Logo" class="chase-logo login-logo">
+      <h1 class="login-title">Sign in</h1>
+      <form id="loginForm" class="login-form">
+        <div class="form-group">
+          <label for="email">Username or Email</label>
+          <input type="email" id="email" name="email" required placeholder="Username or Email">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required placeholder="Password">
+        </div>
+        <button type="submit" class="chase-btn login-btn">Sign in</button>
         <div id="loginError" class="error-msg"></div>
       </form>
       <div class="login-links">
         <a href="#">Forgot username/password?</a>
+        <span class="divider">|</span>
         <a href="#">Open an account</a>
       </div>
-    </section>
+    </div>
   </main>
   <footer class="chase-footer">
     <img src="https://download.logo.wine/logo/Chase_Bank/Chase_Bank-Logo.wine.png" alt="Chase Logo" class="chase-logo" style="height:32px;vertical-align:middle;margin-right:0.5rem;">
