--- a/dashboard.html
+++ b/dashboard.html
@@ -132,6 +132,13 @@
             </div>
             <form id="transferForm" class="transfer-form">
               <div class="form-group">
+                <label for="transferType">Transfer Type</label>
+                <select id="transferType" name="transferType" required>
+                  <option value="domestic">Domestic</option>
+                  <option value="international">International</option>
+                </select>
+              </div>
+              <div class="form-group">
                 <label for="fromAccount">From Account</label>
                 <select id="fromAccount" name="fromAccount" required>
                   <option value="checking">Chase Checking (****1234)</option>
@@ -151,6 +158,23 @@
                 <input type="text" id="externalAccount" name="externalAccount" placeholder="Account Number">
                 <input type="text" id="routingNumber" name="routingNumber" placeholder="Routing Number">
                 <input type="text" id="bankName" name="bankName" placeholder="Bank Name">
+              </div>
+              <div class="form-group" id="internationalFields" style="display: none;">
+                <label for="recipientCountry">Recipient Country</label>
+                <select id="recipientCountry" name="recipientCountry">
+                  <option value="GB">United Kingdom (GBP)</option>
+                  <option value="EU">Eurozone (EUR)</option>
+                  <option value="JP">Japan (JPY)</option>
+                  <option value="CA">Canada (CAD)</option>
+                  <option value="NG">Nigeria (NGN)</option>
+                  <option value="IN">India (INR)</option>
+                  <option value="CN">China (CNY)</option>
+                  <option value="MX">Mexico (MXN)</option>
+                </select>
+                <label for="foreignCurrency">Currency</label>
+                <input type="text" id="foreignCurrency" name="foreignCurrency" readonly>
+                <label for="exchangeRate">Exchange Rate</label>
+                <input type="text" id="exchangeRate" name="exchangeRate" readonly>
               </div>
               <div class="form-group">
                 <label for="transferAmount">Amount</label>
@@ -179,9 +203,12 @@
               <thead>
                 <tr>
                   <th>Date</th>
+                  <th>Type</th>
                   <th>From</th>
                   <th>To</th>
                   <th>Amount</th>
+                  <th>Currency</th>
+                  <th>Exchange Rate</th>
                   <th>Status</th>
                 </tr>
               </thead>
